Fixed about us section issues on smaller height devices

--- a/Frontend/src/MainPage/MainPage.scss
+++ b/Frontend/src/MainPage/MainPage.scss
@@ -51,7 +51,13 @@
     }
 
     .sectionAbout {
-        @include section-setup;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 5%;
         scroll-snap-align: start;
 
         p {
@@ -68,7 +74,7 @@
         align-items: center;
         text-align: center;
         padding: 5%;
-        min-height: 100vh;
+        max-height: 100vh;
         width: 100vw;
         gap: 2%;
         scroll-snap-align: start;
@@ -179,7 +185,7 @@
             gap: 5%;
 
             .previewDiv {
-                width: 350%;
+                width: 100%;
                 height: 50%;
             }
         }
